# ROSJoyDroid

./: .gitignore  Dockerfile  LICENSE  msg_to_fastdds.py  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/jp/eyrin/rosjoydroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rosjoydroid.cpp
app/src/main/cpp/builtin_interfaces/msg/: Time.cxx  Time.h  TimeCdrAux.hpp  TimeCdrAux.ipp  TimePubSubTypes.cxx  TimePubSubTypes.h
app/src/main/cpp/sensor_msgs/msg/: Joy.cxx  Joy.h  JoyCdrAux.hpp  JoyCdrAux.ipp  JoyPubSubTypes.cxx  JoyPubSubTypes.h
app/src/main/cpp/std_msgs/msg/: Header.cxx  Header.h  HeaderCdrAux.hpp  HeaderCdrAux.ipp  HeaderPubSubTypes.cxx  HeaderPubSubTypes.h
app/src/main/java/jp/eyrin/rosjoydroid/: GamepadActivity.kt  MainActivity.kt  SharedPreferences.kt
app/src/main/java/jp/eyrin/rosjoydroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/jp/eyrin/rosjoydroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
